tests/error/type_match/switch_expr_non_exhaustive.bz
// warning: switch expression doesn't cover all possible values and doesn't have an else case [-W non-exhaustive-switch]
// error: variable type 'void' is not instantiable
function test(val: int32)
{
	let _ = switch (val) {
		0, 1, 2 => 0,
	};
}
